--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vux-loader": "^1.2.9",
     "es6-promise": "^4.2.6",
     "font-awesome": "^4.7.0",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "vue-i18n": "^8.8.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
